# AI-Powered-Agriculture-Assistant-using-RAG

./: .gitignore  pyproject.toml  rag_project.ipynb  requirement.txt
